package Builder;

public class MySQLProgram extends Program {}
