package Builder;

public class OracleProgram extends Program {}

