@startuml
abstract class QueryBuilder {
    + generateLimitQuery(limit: int): String
    + generateSubstringQuery(str: String, start: int, length: int): String
}

class OracleQueryBuilder extends QueryBuilder {
    + generateLimitQuery(limit: int): String
    + generateSubstringQuery(str: String, start: int, length: int): String
}

class MySQLQueryBuilder extends QueryBuilder {
    + generateLimitQuery(limit: int): String
    + generateSubstringQuery(str: String, start: int, length: int): String
}

abstract class Program {
    List<String> queries
    + addQuery(query: String)
    + executeQueries(): void
}

class OracleProgram extends Program {}

class MySQLProgram extends Program {}

class ProgramManager {
    QueryBuilder queryBuilder
    + setQueryBuilder(queryBuilder: QueryBuilder)
    + createProgram(): Program
}

QueryBuilder <|-- OracleQueryBuilder
QueryBuilder <|-- MySQLQueryBuilder
Program <|-- OracleProgram
Program <|-- MySQLProgram
@enduml
